@@ -3491,28 +3491,6 @@ operator|.
 name|getCurrent
 argument_list|()
 expr_stmt|;
-name|rmContext
-operator|.
-name|getRMApplicationHistoryWriter
-argument_list|()
-operator|.
-name|applicationStarted
-argument_list|(
-name|this
-argument_list|)
-expr_stmt|;
-name|rmContext
-operator|.
-name|getSystemMetricsPublisher
-argument_list|()
-operator|.
-name|appCreated
-argument_list|(
-name|this
-argument_list|,
-name|startTime
-argument_list|)
-expr_stmt|;
 name|long
 name|localLogAggregationStatusTimeout
 init|=
@@ -5153,6 +5131,16 @@ operator|.
 name|getCallerContext
 argument_list|()
 expr_stmt|;
+comment|// send the ATS create Event
+name|sendATSCreateEvent
+argument_list|(
+name|this
+argument_list|,
+name|this
+operator|.
+name|startTime
+argument_list|)
+expr_stmt|;
 for|for
 control|(
 name|int
@@ -6472,6 +6460,18 @@ operator|.
 name|storeNewApplication
 argument_list|(
 name|app
+argument_list|)
+expr_stmt|;
+comment|// send the ATS create Event
+name|app
+operator|.
+name|sendATSCreateEvent
+argument_list|(
+name|app
+argument_list|,
+name|app
+operator|.
+name|startTime
 argument_list|)
 expr_stmt|;
 block|}
@@ -9566,6 +9566,41 @@ block|{
 return|return
 name|callerContext
 return|;
+block|}
+DECL|method|sendATSCreateEvent (RMApp app, long startTime)
+specifier|private
+name|void
+name|sendATSCreateEvent
+parameter_list|(
+name|RMApp
+name|app
+parameter_list|,
+name|long
+name|startTime
+parameter_list|)
+block|{
+name|rmContext
+operator|.
+name|getRMApplicationHistoryWriter
+argument_list|()
+operator|.
+name|applicationStarted
+argument_list|(
+name|app
+argument_list|)
+expr_stmt|;
+name|rmContext
+operator|.
+name|getSystemMetricsPublisher
+argument_list|()
+operator|.
+name|appCreated
+argument_list|(
+name|app
+argument_list|,
+name|startTime
+argument_list|)
+expr_stmt|;
 block|}
 block|}
 end_class
