@@ -28,6 +28,30 @@ name|mockito
 operator|.
 name|Matchers
 operator|.
+name|any
+import|;
+end_import
+
+begin_import
+import|import static
+name|org
+operator|.
+name|mockito
+operator|.
+name|Matchers
+operator|.
+name|anyLong
+import|;
+end_import
+
+begin_import
+import|import static
+name|org
+operator|.
+name|mockito
+operator|.
+name|Matchers
+operator|.
 name|isA
 import|;
 end_import
@@ -76,18 +100,6 @@ name|mockito
 operator|.
 name|Mockito
 operator|.
-name|times
-import|;
-end_import
-
-begin_import
-import|import static
-name|org
-operator|.
-name|mockito
-operator|.
-name|Mockito
-operator|.
 name|verify
 import|;
 end_import
@@ -101,20 +113,6 @@ operator|.
 name|Mockito
 operator|.
 name|when
-import|;
-end_import
-
-begin_import
-import|import
-name|com
-operator|.
-name|google
-operator|.
-name|common
-operator|.
-name|base
-operator|.
-name|Supplier
 import|;
 end_import
 
@@ -1036,6 +1034,26 @@ name|server
 operator|.
 name|resourcemanager
 operator|.
+name|metrics
+operator|.
+name|SystemMetricsPublisher
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|yarn
+operator|.
+name|server
+operator|.
+name|resourcemanager
+operator|.
 name|nodelabels
 operator|.
 name|RMNodeLabelsManager
@@ -1477,6 +1495,30 @@ operator|.
 name|junit
 operator|.
 name|Test
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|mockito
+operator|.
+name|Mockito
+import|;
+end_import
+
+begin_import
+import|import
+name|com
+operator|.
+name|google
+operator|.
+name|common
+operator|.
+name|base
+operator|.
+name|Supplier
 import|;
 end_import
 
@@ -6381,13 +6423,40 @@ comment|// start RM
 name|MockRM
 name|rm1
 init|=
-name|createMockRM
+operator|new
+name|MockRM
 argument_list|(
 name|conf
 argument_list|,
 name|memStore
 argument_list|)
+block|{
+annotation|@
+name|Override
+specifier|protected
+name|SystemMetricsPublisher
+name|createSystemMetricsPublisher
+parameter_list|()
+block|{
+return|return
+name|spy
+argument_list|(
+name|super
+operator|.
+name|createSystemMetricsPublisher
+argument_list|()
+argument_list|)
+return|;
+block|}
+block|}
 decl_stmt|;
+name|rms
+operator|.
+name|add
+argument_list|(
+name|rm1
+argument_list|)
+expr_stmt|;
 name|rm1
 operator|.
 name|start
@@ -6620,6 +6689,37 @@ operator|.
 name|KILLED
 argument_list|)
 expr_stmt|;
+name|verify
+argument_list|(
+name|rm1
+operator|.
+name|getRMContext
+argument_list|()
+operator|.
+name|getSystemMetricsPublisher
+argument_list|()
+argument_list|,
+name|Mockito
+operator|.
+name|times
+argument_list|(
+literal|3
+argument_list|)
+argument_list|)
+operator|.
+name|appCreated
+argument_list|(
+name|any
+argument_list|(
+name|RMApp
+operator|.
+name|class
+argument_list|)
+argument_list|,
+name|anyLong
+argument_list|()
+argument_list|)
+expr_stmt|;
 comment|// restart rm
 name|MockRM
 name|rm2
@@ -6649,6 +6749,23 @@ argument_list|()
 argument_list|)
 return|;
 block|}
+annotation|@
+name|Override
+specifier|protected
+name|SystemMetricsPublisher
+name|createSystemMetricsPublisher
+parameter_list|()
+block|{
+return|return
+name|spy
+argument_list|(
+name|super
+operator|.
+name|createSystemMetricsPublisher
+argument_list|()
+argument_list|)
+return|;
+block|}
 block|}
 decl_stmt|;
 name|rms
@@ -6662,6 +6779,37 @@ name|rm2
 operator|.
 name|start
 argument_list|()
+expr_stmt|;
+name|verify
+argument_list|(
+name|rm2
+operator|.
+name|getRMContext
+argument_list|()
+operator|.
+name|getSystemMetricsPublisher
+argument_list|()
+argument_list|,
+name|Mockito
+operator|.
+name|times
+argument_list|(
+literal|3
+argument_list|)
+argument_list|)
+operator|.
+name|appCreated
+argument_list|(
+name|any
+argument_list|(
+name|RMApp
+operator|.
+name|class
+argument_list|)
+argument_list|,
+name|anyLong
+argument_list|()
+argument_list|)
 expr_stmt|;
 name|GetApplicationsRequest
 name|request1
