@@ -23,28 +23,6 @@ package|;
 end_package
 
 begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|hadoop
-operator|.
-name|yarn
-operator|.
-name|server
-operator|.
-name|resourcemanager
-operator|.
-name|recovery
-operator|.
-name|records
-operator|.
-name|ApplicationStateData
-import|;
-end_import
-
-begin_import
 import|import static
 name|org
 operator|.
@@ -701,6 +679,28 @@ operator|.
 name|RMStateStore
 operator|.
 name|RMState
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|yarn
+operator|.
+name|server
+operator|.
+name|resourcemanager
+operator|.
+name|recovery
+operator|.
+name|records
+operator|.
+name|ApplicationStateData
 import|;
 end_import
 
@@ -2693,39 +2693,6 @@ argument_list|(
 name|submissionContext
 argument_list|)
 decl_stmt|;
-name|verify
-argument_list|(
-name|writer
-argument_list|)
-operator|.
-name|applicationStarted
-argument_list|(
-name|any
-argument_list|(
-name|RMApp
-operator|.
-name|class
-argument_list|)
-argument_list|)
-expr_stmt|;
-name|verify
-argument_list|(
-name|publisher
-argument_list|)
-operator|.
-name|appCreated
-argument_list|(
-name|any
-argument_list|(
-name|RMApp
-operator|.
-name|class
-argument_list|)
-argument_list|,
-name|anyLong
-argument_list|()
-argument_list|)
-expr_stmt|;
 comment|// NEW => NEW_SAVING event RMAppEventType.START
 name|RMAppEvent
 name|event
